--- a/site/index.html
+++ b/site/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,14 @@
     <title>Teste do curos de html</title>
 </head>
 <body>
-    
+<h1>Page of test course - coursera html</h1>
+<p>Parágrafo</p>
+<p onclick="alert('hi')">Parágrafo com atributo</p>
+<h3>H3</h3>
+<H1>H1</H1>
+
+ <!-- commets
+    comments -->   
+ 
 </body>
 </html>
